Add tests for user and application services